--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "ng-image-slider": "^10.0.0",
     "ngx-dropzone": "^3.1.0",
     "rxjs": "~7.8.0",
